:bug: fix: Tirando o valor de gap

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -95,6 +95,7 @@
     font-size: 0.938rem;
     line-height: 1.33;
     display: grid;
+    gap: 0;
   }
 
   .testimonial__content {
